# sentry-vault

./: .gitignore  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  README.md  TODO.md  output.txt  pyproject.toml  requirements.txt  test_encryption.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature_change.md  performance_improvement.md
.github/workflows/: release-pypi.yml  testpypi.yml
core/: settings.py
src/core/: encryption.py
src/sentryvault/: cli.py  crypto.py  passgen.py  sharding.py  vault.py
src/sentryvault/crypto/: crypto.py
src/sentryvault/passgen/: __init__.py
src/sentryvault/sharding/: __init__.py  sharding.py
src/tests/: test_crypto.py  test_passgen.py  test_sharding.py  test_vault.py
test/: test.txt
vault/: crypto.py
